Working on deprecated stuff
+ New entities: community, roles
+ New views: register, welcome

--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -72,6 +72,22 @@ div#content {
 }
 
 /* ------------------------- */
+/*   WELCOME                 */
+/* ------------------------- */
+
+div#welcome-buttons {
+    text-align: center;
+}
+div#welcome-buttons a button {
+	margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+	height: 150px;
+	width: 250px;
+}
+
+/* ------------------------- */
 /*   TRIM FORM               */
 /* ------------------------- */
 
