--- a/src/foot5x5/MainBundle/Resources/views/match_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/match_form.html.twig
@@ -31,7 +31,7 @@
                             {{ form_widget(matchForm.date, {attr: {
                                 'class': 'form-control' },
                             }) }}
-                            <label class="input-group-btn" for="foot5x5_mainbundle_result_date_datepicker">
+                            <label class="input-group-btn" for="result_date_datepicker">
                                 <span class="btn btn-default">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                 </span>
@@ -88,7 +88,7 @@
 
 <script type="text/javascript">
     jQuery(function($) {
-        $('#foot5x5_mainbundle_result_date_datepicker').datepicker({
+        $('#result_date_datepicker').datepicker({
             //altFormat  : "yy-mm-dd",
             //altField   : '#alternate',
             dateFormat: 'yy-mm-dd',
@@ -164,7 +164,7 @@
             var playerNameBefore = $(this).text().trim();
 
             // id de l'input hidden correspondant
-            var inputId = "#foot5x5_mainbundle_result_"+slotId+"_player";
+            var inputId = "#result_"+slotId+"_player";
 
             // nom du joueur droppé
             var playerName = ui.draggable.text().trim();
@@ -197,7 +197,7 @@
             // alert(ui.draggable.text());
             var player = $(this).text().trim();
             var slotId = $(this).attr("id");
-            var inputId = "#foot5x5_mainbundle_result_"+slotId+"_player";
+            var inputId = "#result_"+slotId+"_player";
 
             // Effacer le nom dans la zone matchPlayer
             $(this).text("");
