--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -797,9 +797,13 @@ tr#finances-totalCredits td {
 .admin-table > table > tbody > tr:hover > td {
    background-color: #FFFFFF;
 }
+.admin-left-column {
+	text-align: left;
+	padding-left: 1em !important;
+}
 .admin-right-column {
-	text-align: right;
-	padding-right: 5px;
+    text-align: right;
+    padding-right: 5px;
 }
 .admin-center-column {
 	text-align: center;
