Footer 2017 + Capistrano config

--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -93,7 +93,7 @@
         <div id="content" class="container">{% block content %}{% endblock %}</div>
         <div id="footer">
             <div class="container">
-                <p class="navbar-text pull-left">Foot 5x5 - © Etienne AURAND, 2015</p>
+                <p class="navbar-text pull-left">Foot 5x5 - © Etistav, 2017</p>
             </div>
         </div>
     </div>
