--- a/src/foot5x5/MainBundle/Resources/views/admin.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/admin.html.twig
@@ -232,7 +232,7 @@
                             {% endif %}
                         {% endif %}
                     </td>
-                    <td class="col-md-2 admin-left-column">{{ user.player.name }}</td>
+                    <td class="col-md-2 admin-left-column">{% if user.player.name is defined %}{{ user.player.name }}{% endif %}</td>
                     <td class="col-md-2 admin-left-column">{{ user.email }}</td>
                     <td class="col-md-2 admin-center-column">
                         <a href="{{ path('edit_user', {'id':user.id}) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
