--- a/src/foot5x5/UserBundle/Resources/views/register.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/register.html.twig
@@ -9,10 +9,22 @@
     {{ flashMessage }}
 </div>
 {% endfor %}
-{% if form_errors(userForm.password.first) %}
+{#% if form_errors(userForm.password.first) %}
 <div class="alert alert-danger">
     {{ form_errors(userForm.password.first) }}
 </div>
+{% endif %#}
+{% if not userForm.vars.valid %}
+<div class="alert alert-danger"><ul>
+{% for child in userForm.children %}
+    {% for error in child.vars.errors %}
+        <li>{{ error.message }}</li>
+    {% endfor %}
+{% endfor %}
+{% if form_errors(userForm.password.first) %}
+    <li>Les mots de passe saisis ne sont pas identiques.</li>
+{% endif %}
+</ul></div>
 {% endif %}
 
 
@@ -23,7 +35,6 @@
             'class': 'col-sm-5 control-label'
         }}) }}
         <div class="col-sm-4">
-            {{ form_errors(userForm.username) }}
             {{ form_widget(userForm.username, { 'attr':  {
                 'class': 'form-control'
             }}) }}
@@ -54,7 +65,6 @@
             'class': 'col-sm-5 control-label'
         }}) }}
         <div class="col-sm-4">
-            {{ form_errors(userForm.firstname) }}
             {{ form_widget(userForm.firstname, { 'attr':  {
                 'class': 'form-control'
             }}) }}
@@ -65,7 +75,6 @@
             'class': 'col-sm-5 control-label'
         }}) }}
         <div class="col-sm-4">
-            {{ form_errors(userForm.lastname) }}
             {{ form_widget(userForm.lastname, { 'attr':  {
                 'class': 'form-control'
             }}) }}
@@ -76,7 +85,6 @@
             'class': 'col-sm-5 control-label'
         }}) }}
         <div class="col-sm-4 form-inline">
-            {{ form_errors(userForm.birthday) }}
             {{ form_widget(userForm.birthday.day, { 'attr':  {
                 'class': 'form-control mb-10'
             }}) }}
@@ -93,7 +101,6 @@
             'class': 'col-sm-5 control-label'
         }}) }}
         <div class="col-sm-4">
-            {{ form_errors(userForm.email) }}
             {{ form_widget(userForm.email, { 'attr':  {
                 'class': 'form-control'
             }}) }}
