--- a/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
@@ -6,7 +6,7 @@
 <h2 class="text-center">{{ block('title') }}</h2>
 <div class="well">
     <div id="welcome-buttons">
-        <a href="{{ path('welcome') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Créer une communauté</button></a>
+        <a href="{{ path('create_community') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Créer une communauté</button></a>
         <a href="{{ path('welcome') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Rejoindre une communauté</button></a>
     </div>
 </div>
