--- a/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
@@ -4,11 +4,21 @@
 
 {% block content %}
 <h2 class="text-center">{{ block('title') }}</h2>
-<div class="well">
-    <div id="welcome-buttons">
+<div class="well col-sm-12">
+    <div id="welcome-buttons" class="col-sm-4 col-sm-offset-4">
         <a href="{{ path('create_community') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Créer une communauté</button></a>
         <a href="{{ path('welcome') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Rejoindre une communauté</button></a>
     </div>
+    {% if communities is defined %}
+    <div id="welcome-communities" class="col-sm-4 col-sm-offset-4">
+        <h3>Vos communautés</h3>
+        <ul class="list-group">
+            {% for community in communities %}
+                <a href="{{ path('select_community', {'id':community.id}) }}"><li class="list-group-item">{{ community.name }}</li></a>
+            {% endfor %}
+        </ul>
+    </div>
+    {% endif %}
 </div>
 
 {% endblock %}
