--- a/src/foot5x5/MainBundle/Resources/views/finance.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/finance.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Finances{% endblock %}
 
 {% block content %}
-
+<h2 class="text-center">{{ block('title') }}</h2>
 <div id="finances-container" class="col-md-12 well">
     {% if debts is defined %}
     <div class="col-md-7">
@@ -54,23 +54,24 @@
     <div class="col-md-5">
         <h3><span class="label">Dernières Transactions</span></h3>
         <table class="table table-striped table-bordered table-condensed">
-                <thead class="dark-blue-grad">
-                    <tr>
-                        <th class="col-md-3">Date</th>
-                        <th class="col-md-3">Donneur</th>
-                        <th class="col-md-3">Receveur</th>
-                        <th class="col-md-3 text-center">Montant</th>
-                    </tr>
-                </thead>
-                {% for tran in transactions %}
+            <thead class="dark-blue-grad">
                 <tr>
-                    <td class="col-md-3">{{ tran.date|date('d/m/Y') }}</a></td>
-                    <td class="col-md-3">{{ tran.giver.name }}</a></td>
-                    <td class="col-md-3">{{ tran.receiver.name }}</a></td>
-                    <td class="col-md-3 text-center">{{ tran.amount }} €</a></td>
+                    <th class="col-md-3">Date</th>
+                    <th class="col-md-3">Donneur</th>
+                    <th class="col-md-3">Receveur</th>
+                    <th class="col-md-3 text-center">Montant</th>
                 </tr>
-                {% endfor %}
-            </table>
+            </thead>
+            {% for tran in transactions %}
+            <tr>
+                <td class="col-md-3">{{ tran.date|date('d/m/Y') }}</a></td>
+                <td class="col-md-3">{{ tran.giver.name }}</a></td>
+                <td class="col-md-3">{{ tran.receiver.name }}</a></td>
+                <td class="col-md-3 text-center">{{ tran.amount }} €</a></td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
     {% endif %}
 </div>
 {% endblock %}
