--- a/src/foot5x5/MainBundle/Resources/views/index.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "foot5x5MainBundle::layout.html.twig" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{app.session.get('community_name')}}{% endblock %}
 
 {% block content %}
 
