--- a/src/foot5x5/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/Security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends "foot5x5MainBundle::layout.html.twig" %}
 
-{% block title %}User authentification{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block content %}
 <h2 class="text-center">{{ block('title') }}</h2>
