--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -34,12 +34,16 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-left" href="{{ path('foot5x5_main_homepage') }}"><img src="{{ 'logoFoot5x5_001d.png'  | imagine_filter('avatar_40') }}" alt="Foot5x5_logo" /></a>
+                    <a class="navbar-left" href="{{ path('welcome') }}"><img src="{{ 'logoFoot5x5_001d.png'  | imagine_filter('avatar_40') }}" alt="Foot5x5_logo" /></a>
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse-target">
+                    {% if app.session.get('community_name') is not empty %}
                     <ul class="nav navbar-nav">
-                        <li {% if app.request.attributes.get('_route') == 'foot5x5_main_homepage' %}class="active"{% endif %}>
-                            <a href="{{ path('foot5x5_main_homepage') }}">Home</a>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="{{ path('foot5x5_main_homepage') }}">{{app.session.get('community_name')}}<b class="caret"></b></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ path('welcome') }}">Changer communauté</a></li>
+                            </ul>
                         </li>
                         <li {% if app.request.attributes.get('_route') == 'results' %}class="active"{% endif %}>
                             <a href="{{ path('results') }}">Résultats</a>
@@ -62,12 +66,19 @@
                         </li>
                         {% endif %}
                     </ul>
+                    {% else %}
+                    <ul class="nav navbar-nav">
+                        <li><a href="{{ path('welcome') }}">Foot 5x5</a></li>
+                    </ul>
+                    {% endif %}
                     <ul class="nav navbar-nav navbar-right">
                         {% if app.user and is_granted('IS_AUTHENTICATED_FULLY') %}
-                            {% if app.user and is_granted('ROLE_ADMIN') %}
-                            <li class="{% if adminMenu is defined %}active{% endif %}">
-                                <a href="{{ path('admin_home') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
-                            </li>
+                            {% if app.session.get('community_name') is not empty %}
+                                {% if app.user and is_granted('ROLE_ADMIN') %}
+                                <li class="{% if adminMenu is defined %}active{% endif %}">
+                                    <a href="{{ path('admin_home') }}"><span class="glyphicon glyphicon-cog"></span> Administration</a>
+                                </li>
+                                {% endif %}
                             {% endif %}
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
