--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -93,6 +93,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <span class="glyphicon glyphicon-user"></span> Non connecté <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
+                                    <li><a href="{{ path('register') }}">S'inscrire</a></li>
                                     <li><a href="{{ path('login') }}">Connexion</a></li>
                                 </ul>
                             </li>
