Manage user Roles + Join community view

--- a/src/foot5x5/MainBundle/Resources/views/admin.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/admin.html.twig
@@ -203,9 +203,11 @@
     {% else %}
     <div class="tab-pane fade admin-panel" id="admin-users-panel">
     {% endif %}
+    	{#
         <div class="admin-button-new col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
             <a href="{{ path('add_user') }}"><button type="button" class="btn btn-primary dark-blue-grad"><span class="glyphicon glyphicon-plus"></span> Nouvel utilisateur</button></a>
         </div>
+        #}
         <div class="admin-table table-responsive col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
         {% if users %}
             <table class="table table-hover table-condensed">
@@ -236,10 +238,10 @@
                     <td class="col-md-2 admin-left-column">{% if user.user.player.name is defined %}{{ user.user.player.name }}{% endif %}</td>
                     <td class="col-md-2 admin-left-column">{{ user.user.email }}</td>
                     <td class="col-md-2 admin-center-column">
-                        <a href="{{ path('edit_user', {'id':user.user.id}) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
-                        <button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#userDialog{{ user.user.id }}"><span class="glyphicon glyphicon-remove"></span>
+                        <a href="{{ path('edit_user_role', {'id':user.id}) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span></a>
+                        <button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#userDialog{{ user.id }}"><span class="glyphicon glyphicon-remove"></span>
                         </button>
-                        <div class="modal fade" id="userDialog{{ user.user.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="userDialog{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -247,11 +249,11 @@
                                         <h4 class="modal-title" id="myModalLabel">Confirmation suppression utilisateur</h4>
                                     </div>
                                     <div class="modal-body">
-                                        Veux-tu vraiment supprimer le user {{ user.user.username }} ?
+                                        Veux-tu vraiment supprimer le user {{ user.user.username }} de la communauté ?
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                                        <a href="{{ path('delete_user', {'id':user.user.id}) }}" class="btn btn-danger">Supprimer</a>
+                                        <a href="{{ path('delete_user_role', {'id':user.id}) }}" class="btn btn-danger">Supprimer</a>
                                     </div>
                                 </div><!-- /.modal-content -->
                             </div><!-- /.modal-dialog -->
