--- a/src/foot5x5/MainBundle/Resources/views/profile.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/profile.html.twig
@@ -33,7 +33,7 @@
 			{% endif %}
 		</p>
 		<p><span class="profile-info-label">Nom joueur : </span>
-			{% if user.player %}{{ user.player.name }}
+			{% if player %}{{ player.name }}
 			{% else %}-
 			{% endif %}
 		</p>
