--- a/src/foot5x5/MainBundle/Resources/views/player_form.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/player_form.html.twig
@@ -85,6 +85,18 @@
         </div>
     </div>
     <div class="form-group">
+        {{ form_label(playerForm.user, null, { 'label_attr':  {
+            'class': 'col-sm-5 control-label'
+        }}) }}
+        <div class="col-sm-2">
+            {{ form_errors(playerForm.user) }}
+            {{ form_widget(playerForm.user, { 'attr':  {
+                'class': 'form-control',
+                'rows': '8'
+            }}) }}
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-sm-offset-5 col-sm-3">
             <input type="submit" class="btn btn-primary" value="{{ buttonLabel }}" />
         </div>
