Add padding-bottom to randomDraw list of players

--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -228,6 +228,7 @@ table#result-table #datepicker input {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	padding-bottom: 5px;
 	width: 100%;
 }
 #teamA-sortable, #teamB-sortable, #teamA-droppable, #teamB-droppable {
