--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -42,6 +42,7 @@
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="{{ path('foot5x5_main_homepage') }}">{{app.session.get('community_name')}}<b class="caret"></b></a>
                             <ul class="dropdown-menu">
+                                <li><a href="{{ path('foot5x5_main_homepage') }}">Home</a></li>
                                 <li><a href="{{ path('welcome') }}">Changer communauté</a></li>
                             </ul>
                         </li>
