--- a/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
+++ b/src/foot5x5/UserBundle/Resources/views/welcome.html.twig
@@ -9,8 +9,9 @@
     {{ flashMessage }}
 </div>
 {% endfor %}
-<div class="well col-sm-12">
+<div class="col-sm-12">
     <div id="welcome-buttons" class="col-sm-4 col-sm-offset-4">
+        <img src="{{ 'logoFoot5x5_001d.png'  | imagine_filter('avatar_200') }}" alt="Foot5x5_logo" class="img-responsive"/>
         <a href="{{ path('create_community') }}"><button type="button" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Créer une communauté</button></a>
         <a href="{{ path('join_community') }}"><button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-chevron-right"></span> Rejoindre une communauté</button></a>
     </div>
