--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -85,6 +85,7 @@ div#home-buttons a button {
 	height: 70px;
 	width: 100%;
 }
+div#welcome-buttons img,
 div#home-buttons img {
 	margin: auto;
 	margin-bottom: 2em;
