--- a/src/foot5x5/MainBundle/Resources/views/layout.html.twig
+++ b/src/foot5x5/MainBundle/Resources/views/layout.html.twig
@@ -68,8 +68,8 @@
                         {% endif %}
                     </ul>
                     {% else %}
-                    <ul class="nav navbar-nav">
-                        <li><a href="{{ path('welcome') }}">Foot 5x5</a></li>
+                    <ul id="navbar-site-title" class="nav navbar-nav">
+                        <li><a href="{{ path('welcome') }}">FOOT 5X5</a></li>
                     </ul>
                     {% endif %}
                     <ul class="nav navbar-nav navbar-right">
@@ -83,7 +83,7 @@
                             {% endif %}
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-user"></span> Bienvenue, {{ app.user.username }} <b class="caret"></b></a>
+                                <span class="glyphicon glyphicon-user"></span> {{ app.user.username }} <b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><a href="{{ path('myprofile') }}">Mon Profil</a></li>
                                     <li><a href="{{ path('logout') }}">Déconnexion</a></li>
@@ -106,7 +106,7 @@
         <div id="content" class="container">{% block content %}{% endblock %}</div>
         <div id="footer">
             <div class="container">
-                <p class="navbar-text pull-left">Foot 5x5 - © Etistav, 2017</p>
+                <p class="navbar-text pull-left">Foot 5x5 - © Etistav, 2018</p>
             </div>
         </div>
     </div>
