--- a/web/css/foot5x5.css
+++ b/web/css/foot5x5.css
@@ -1,4 +1,12 @@
 /* ------------------------- */
+/*   FONTS                   */
+/* ------------------------- */
+@font-face {
+	src: url(fonts/Montserrat-Regular.ttf);
+	font-family: montserrat;
+}
+
+/* ------------------------- */
 /*   GENERAL                 */
 /* ------------------------- */
 
@@ -8,7 +16,7 @@ body {
     background: -o-linear-gradient(right, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
     background: -webkit-linear-gradient(left, rgb(250,250,250) 0%, rgb(234,234,250) 100%);
 	color: #191950;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-family: montserrat, "Trebuchet MS", Helvetica, sans-serif;
     padding-top: 60px;
 }
 #content {
@@ -37,10 +45,18 @@ body {
 	border-color: #99CCFF;
 	color: #99CCFF;
 }
+h2, h3 {
+	font-family: montserrat;
+}
 
 /* ------------------------- */
 /*   NAV BAR                 */
 /* ------------------------- */
+#navbar-site-title li a {
+	font-family: montserrat;
+	font-size: 18px;
+}
+
 nav.navbar-custom {
 	border-bottom: 3px solid #4F5261;
 }
